Fix app URL handling to use ezearn.org for referrals

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:5432/DB?schema=public"
 DIRECT_URL="postgresql://USER:PASSWORD@HOST:5432/DB?schema=public"
-NEXT_PUBLIC_APP_URL=
+NEXT_PUBLIC_APP_URL=https://ezearn.org
 DEFAULT_ADMIN_EMAIL=
 DEFAULT_ADMIN_PASSWORD=
 DEFAULT_ADMIN_NAME=
