Add TheoremReach postback and finalize theme + level key updates

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ CPX_POSTBACK_SECRET=
 BITLABS_APP_TOKEN=
 BITLABS_APP_SECRET=
 BITLABS_POSTBACK_SECRET=
+BITLABS_SERVER_TO_SERVER_KEY=
+THEOREMREACH_APP_TOKEN=
+THEOREMREACH_APP_SECRET=
+THEOREMREACH_POSTBACK_SECRET=
+THEOREMREACH_SERVER_TO_SERVER_KEY=
