Integrate TheoremReach offerwall and add branded logo

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ BITLABS_APP_SECRET=
 BITLABS_POSTBACK_SECRET=
 BITLABS_SERVER_TO_SERVER_KEY=
 THEOREMREACH_APP_TOKEN=
+THEOREMREACH_APP_ID=
+THEOREMREACH_PLACEMENT_ID=
 THEOREMREACH_APP_SECRET=
 THEOREMREACH_POSTBACK_SECRET=
 THEOREMREACH_SERVER_TO_SERVER_KEY=
