Add Google OAuth sign in and sign up flow

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ DEFAULT_ADMIN_REFERRAL_CODE=
 SUPPORT_EMAIL=
 RESEND_API_KEY=
 RESEND_FROM=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
 CPX_APP_ID=
 CPX_APP_SECRET=
 CPX_POSTBACK_SECRET=
