Integrate Revtoo offerwall page and earn card

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ THEOREMREACH_POSTBACK_SECRET=
 THEOREMREACH_SERVER_TO_SERVER_KEY=
 REVTOO_APP_ID=
 REVTOO_APP_TOKEN=
+REVTOO_WALL_API_KEY=
 REVTOO_APP_SECRET=
 REVTOO_SECRET_KEY=
 REVTOO_SERVER_TO_SERVER_KEY=
